# StudentManagerSystem

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  mainwindow.cpp  mainwindow.h
style/: style.qss
